resources/idsvr/nginx-gateway-routes.yaml
###################################################################
# Adjust routes depending on how you use the Curity Identity Server
###################################################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idsvr-admin-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - admin.testcluster.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: curity-idsvr-admin-svc
      kind: Service
      port: 6749
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idsvr-oauth-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - login.testcluster.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: curity-idsvr-runtime-svc
      kind: Service
      port: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idsvr-oauthagent-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - api.demoapp.example
  rules:
  - matches:
    - path:
        value: /oauthagent/example
    backendRefs:
    - name: curity-idsvr-runtime-svc
      kind: Service
      port: 8443
